Add Aurora Designs logo to navigation and update page title/favicon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AI-powered task management application with Gemini integration"
+      content="Aurora Designs - AI-powered task management application with Gemini integration"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>AI Task Master</title>
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
+    <title>Aurora Designs - Task Master</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
